# sql-case-studies

./: .gitattributes  404.html  README.md  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy_docs.yml
athena_client/: index.html
balanced_tree/: index.html
bitcoin_eda/: index.html
bitcoin_window_functions/: index.html
case_studies/balanced_tree/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/balanced_tree/sql/: bonus_challenge.sql  product_analysis.sql  product_details_ddl.sql  product_hierarchy_ddl.sql  product_prices_ddl.sql  sales_analysis.sql  sales_ddl.sql  transactions_analysis.sql
case_studies/bitcoin/notebooks/: create_delete.ipynb  eda.ipynb  window_functions.ipynb
case_studies/bitcoin/sql/: daily_btc_ddl.sql  eda.sql  window_functions.sql
case_studies/clique_bait/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/clique_bait/sql/: campaign_analysis.sql  campaign_identifier_ddl.sql  digital_analysis.sql  event_identifier_ddl.sql  events_ddl.sql  page_hierarchy_ddl.sql  product_funnel_analysis.sql  users_ddl.sql
case_studies/dannys_diner/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/dannys_diner/sql/: business_questions.sql  members_ddl.sql  menu_ddl.sql  sales_ddl.sql
case_studies/data_bank/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/data_bank/sql/: business_questions_customer_nodes.sql  business_questions_customer_transactions.sql  customer_nodes_ddl.sql  customer_transactions_ddl.sql  regions_ddl.sql
case_studies/data_mart/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/data_mart/sql/: before_after_analysis.sql  data_cleaning.sql  eda.sql  weekly_sales_ddl.sql
case_studies/foodie_fi/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/foodie_fi/sql/: data_analysis.sql  payment_table.sql  plans_ddl.sql  subscriptions_ddl.sql  transition_matrices.sql
case_studies/fresh_segments/notebooks/: business_questions.ipynb  create_delete.ipynb
case_studies/fresh_segments/sql/: index_analysis.sql  interest_analysis.sql  interest_map_ddl.sql  interest_metrics_ddl.sql  segment_analysis.sql
clique_bait/: index.html
dannys_diner/: index.html
data/balanced_tree/product_details/: product_details.parquet
data/balanced_tree/product_hierarchy/: product_hierarchy.parquet
data/balanced_tree/product_prices/: product_prices.parquet
data/balanced_tree/sales/: sales.parquet
data/clique_bait/campaign_identifier/: campaign_identifier.parquet
data/clique_bait/event_identifier/: event_identifier.parquet
data/clique_bait/events/: events.parquet
data_bank/: index.html
data_mart/: index.html
docs/: athena_client.md  balanced_tree.ipynb  bitcoin_eda.ipynb  clique_bait.ipynb  data_bank.ipynb  data_mart.ipynb  index.md  utils.md
erd/: index.html
foodie_fi/: index.html
fresh_segments/: index.html
search/: search_index.json
src/: athena.py  utils.py
utils/: index.html
(+14 files in other folders)
