[tool.poetry]
name = "sql-case-studies"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
awswrangler = { version = ">=3.9.0", python = ">=3.11, <4.0" }
pandas = ">=2.2.2"
boto3 = ">=1.34.143"
matplotlib = ">=3.9.1"
scipy = ">=1.14.0"
scikit-posthocs = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.5.31"
mkdocs = ">=1.6.0"
mkdocstrings = {version = ">=0.25.2", extras = ["python"]}

[tool.poetry.group.lint-fmt.dependencies]
mypy = ">=1.12.0"
black = ">=24.10.0"
isort = ">=5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
