[project]
name = "sql-case-studies"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.10.0",
    "boto3>=1.35.68",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pymc>=5.15.0",
    "scikit-posthocs>=0.10.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
]
lint-fmt = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.mypy]
python_version = 3.12
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*"
]
ignore_missing_imports = true
